[package]
name = "ase-stuff"
version = "0.1.0"
authors = ["CursedFlames <18627001+CursedFlames@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ase = { path = "ase-rs" }
simple_logger = "1.9.0"
flate2 = "1.0.17"
log = "0.4.11"
walkdir = "2.3.1"
